[gd_scene load_steps=45 format=3 uid="uid://ngtpcu1w36s5"]

[ext_resource type="Texture2D" uid="uid://cmq3tfef8x3ex" path="res://Spritesheets/Enemies/Sword_Skeleton.png" id="1_5nep8"]
[ext_resource type="Script" path="res://Scripts/Enemies/Skeleton_Warrior/main_stats.gd" id="1_sjipi"]
[ext_resource type="PackedScene" uid="uid://bfkytxsm004ni" path="res://Scenes/StateMachine.tscn" id="2_1f302"]
[ext_resource type="Resource" uid="uid://dcla0uorl72kc" path="res://Resources/Skeleton_Warrior.tres" id="2_1xrwo"]
[ext_resource type="Script" path="res://Scripts/Enemies/Skeleton_Warrior/damaged.gd" id="3_5f1e7"]
[ext_resource type="PackedScene" uid="uid://cwku83f0cg2br" path="res://Scenes/Components/health_component.tscn" id="3_iu5ss"]
[ext_resource type="Script" path="res://Scripts/Resources/entity_resources.gd" id="4_dan6o"]
[ext_resource type="Script" path="res://Scripts/Components/hurt_box_component.gd" id="4_j3edn"]
[ext_resource type="Script" path="res://Scripts/Enemies/Skeleton_Warrior/death.gd" id="4_koktf"]
[ext_resource type="Material" uid="uid://cqqne3pxiytgm" path="res://Resources/FlashShaderResource.tres" id="5_8m2at"]
[ext_resource type="PackedScene" uid="uid://bexq54sbkhv2o" path="res://Scenes/Misc/damage_number.tscn" id="5_jt1pr"]
[ext_resource type="Script" path="res://Scripts/Enemies/Skeleton_Warrior/move.gd" id="6_apmgx"]
[ext_resource type="Script" path="res://Scripts/Enemies/Skeleton_Warrior/attack.gd" id="7_3mr68"]
[ext_resource type="PackedScene" uid="uid://dlbc4k4o4iwv3" path="res://Scenes/Misc/basic_health_bar.tscn" id="8_aasmt"]
[ext_resource type="Shader" path="res://Shaders/Outline.gdshader" id="14_7dj2w"]
[ext_resource type="Texture2D" uid="uid://bmo0oks3fdkua" path="res://Spritesheets/Misc/elite_crown.png" id="15_bnq6x"]

[sub_resource type="Resource" id="Resource_5etxj"]
resource_local_to_scene = true
script = ExtResource("4_dan6o")
damage = 10
max_health = 20
max_armor = 5
speed = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_x281a"]
radius = 4.67904

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22qb7"]
size = Vector2(11, 27)

[sub_resource type="Animation" id="Animation_b8vdq"]
resource_name = "attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/Hit_shape:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.307786),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/Hit_shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("State Machine/Attack:slide_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.85, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10.0, 75.0, 150.0]
}

[sub_resource type="Animation" id="Animation_drqlu"]
resource_name = "Damaged"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/Hit_shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("State Machine/Damaged")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"handle_transition"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("HealthComponent")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_health"
}]
}

[sub_resource type="Animation" id="Animation_bicon"]
resource_name = "Skeleton_Death"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 22, 23, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HurtBox/Hurt_shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6xupc"]
resource_name = "Move"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Hit_shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5ep0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtBox/Hurt_shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/Hit_shape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xr4yv"]
_data = {
"Attack": SubResource("Animation_b8vdq"),
"Damaged": SubResource("Animation_drqlu"),
"Death": SubResource("Animation_bicon"),
"Move": SubResource("Animation_6xupc"),
"RESET": SubResource("Animation_5ep0u")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xkkva"]
animation = &"Attack"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_rjywd"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hhdwr"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_xkkva")
nodes/Animation/position = Vector2(140, 100)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_rjywd")
nodes/TimeScale/position = Vector2(380, 80)
nodes/output/position = Vector2(620, 80)
node_connections = [&"TimeScale", 0, &"Animation", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4dlq1"]
animation = &"Damaged"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qj0jl"]
animation = &"Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gw4he"]
animation = &"Move"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_08iho"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ri1l3"]
advance_mode = 2
advance_expression = "current_state.get_name() == \"Death\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_be02m"]
advance_mode = 2
advance_expression = "current_state.get_name() == \"Damaged\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_na0v4"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state.get_name() == \"Move\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gg8ry"]
advance_mode = 2
advance_expression = "current_state.get_name() == \"Death\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uvfiu"]
advance_mode = 2
advance_expression = "current_state.get_name() == \"Attack\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y00g5"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state.get_name() == \"Move\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dohth"]
switch_mode = 2
advance_mode = 2
advance_expression = "current_state.get_name() == \"Attack\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_re7mo"]
advance_mode = 2
advance_expression = "current_state.get_name() == \"Death\""

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x4x2g"]
advance_mode = 2
advance_expression = "current_state.get_name() == \"Damaged\""

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_66yhb"]
resource_local_to_scene = true
allow_transition_to_self = true
states/Attack/node = SubResource("AnimationNodeBlendTree_hhdwr")
states/Attack/position = Vector2(380, 36)
states/Damaged/node = SubResource("AnimationNodeAnimation_4dlq1")
states/Damaged/position = Vector2(574, 44)
states/Death/node = SubResource("AnimationNodeAnimation_qj0jl")
states/Death/position = Vector2(574, 163)
states/End/position = Vector2(845, 163)
states/Move/node = SubResource("AnimationNodeAnimation_gw4he")
states/Move/position = Vector2(380, 166)
states/Start/position = Vector2(203, 166)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_08iho"), "Damaged", "Death", SubResource("AnimationNodeStateMachineTransition_ri1l3"), "Move", "Damaged", SubResource("AnimationNodeStateMachineTransition_be02m"), "Damaged", "Move", SubResource("AnimationNodeStateMachineTransition_na0v4"), "Move", "Death", SubResource("AnimationNodeStateMachineTransition_gg8ry"), "Move", "Attack", SubResource("AnimationNodeStateMachineTransition_uvfiu"), "Attack", "Move", SubResource("AnimationNodeStateMachineTransition_y00g5"), "Damaged", "Attack", SubResource("AnimationNodeStateMachineTransition_dohth"), "Attack", "Death", SubResource("AnimationNodeStateMachineTransition_re7mo"), "Attack", "Damaged", SubResource("AnimationNodeStateMachineTransition_x4x2g")]
graph_offset = Vector2(-39, -72)

[sub_resource type="LabelSettings" id="LabelSettings_ucr5y"]
font_size = 4
font_color = Color(1, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11jst"]
shader = ExtResource("14_7dj2w")
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/pixel_size = 0.5

[node name="Skeleton" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "sprite", "animation_tree", "elite_crown") groups=["Enemy"]]
light_mask = 0
z_index = 1
y_sort_enabled = true
scale = Vector2(1.3, 1.3)
collision_layer = 2
collision_mask = 7
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_sjipi")
base_stats = ExtResource("2_1xrwo")
health_component = NodePath("HealthComponent")
sprite = NodePath("Skeleton_Sprite")
animation_tree = NodePath("AnimationTree")
elite_crown = NodePath("EliteCrown")
droped_xp_amount = 5

[node name="HealthComponent" parent="." node_paths=PackedStringArray("health_bar", "sprite", "damage_number_component", "state_machine") instance=ExtResource("3_iu5ss")]
stat_sheet = SubResource("Resource_5etxj")
health_bar = NodePath("../BasicHealthBar")
sprite = NodePath("../Skeleton_Sprite")
damage_number_component = NodePath("../DamageNumberComponent")
state_machine = NodePath("../State Machine")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 12)
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_x281a")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("root", "health_component", "state_machine", "animation_tree") groups=["Enemy_HurtBox"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("4_j3edn")
root = NodePath("..")
health_component = NodePath("../HealthComponent")
state_machine = NodePath("../State Machine")
animation_tree = NodePath("../AnimationTree")

[node name="Hurt_shape" type="CollisionShape2D" parent="HurtBox" groups=["Enemy_HurtBox"]]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_22qb7")
debug_color = Color(0.219764, 0.639022, 7.70092e-07, 0.42)

[node name="HitBox" type="Area2D" parent="."]
visible = false
position = Vector2(-2.84217e-14, -1.13687e-13)
scale = Vector2(-1, -1)
collision_layer = 2
input_pickable = false

[node name="Hit_shape" type="CollisionPolygon2D" parent="HitBox"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1.66893e-06, 5.96046e-08)
polygon = PackedVector2Array(0, 0, -9, 18, -17, 15, -22, 12, -25, 6, -26, 0, -25, -6, -22, -12, -17, -15, -9, -17)

[node name="Skeleton_Sprite" type="Sprite2D" parent="."]
light_mask = 0
y_sort_enabled = true
material = ExtResource("5_8m2at")
position = Vector2(0, 13.0769)
texture = ExtResource("1_5nep8")
offset = Vector2(0, -13.0769)
hframes = 18
vframes = 2
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xr4yv")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_66yhb")
advance_expression_base_node = NodePath("../State Machine")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/TimeScale/scale = 1.0

[node name="DamageNumberComponent" parent="." instance=ExtResource("5_jt1pr")]

[node name="BasicHealthBar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_aasmt")]
visible = false
offset_left = -11.5385
offset_top = -13.8462
offset_right = 9.46154
offset_bottom = -12.8462
health_component = NodePath("../HealthComponent")

[node name="State Machine" parent="." node_paths=PackedStringArray("base_state") instance=ExtResource("2_1f302")]
base_state = NodePath("Move")

[node name="Damaged" type="Node" parent="State Machine" node_paths=PackedStringArray("root", "health_component")]
script = ExtResource("3_5f1e7")
root = NodePath("../..")
health_component = NodePath("../../HealthComponent")

[node name="Death" type="Node" parent="State Machine" node_paths=PackedStringArray("root", "sprite", "health_bar")]
script = ExtResource("4_koktf")
root = NodePath("../..")
sprite = NodePath("../../Skeleton_Sprite")
health_bar = NodePath("../../BasicHealthBar")

[node name="Attack" type="Node" parent="State Machine" node_paths=PackedStringArray("root", "hitbox", "health_component")]
script = ExtResource("7_3mr68")
root = NodePath("../..")
hitbox = NodePath("../../HitBox")
health_component = NodePath("../../HealthComponent")

[node name="Move" type="Node" parent="State Machine" node_paths=PackedStringArray("root", "hitbox", "sprite", "health_component")]
script = ExtResource("6_apmgx")
root = NodePath("../..")
hitbox = NodePath("../../HitBox")
sprite = NodePath("../../Skeleton_Sprite")
health_component = NodePath("../../HealthComponent")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -19.2308
offset_top = -26.9231
offset_right = 20.7692
offset_bottom = -3.92308
label_settings = SubResource("LabelSettings_ucr5y")
metadata/_edit_use_anchors_ = true

[node name="EliteCrown" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_11jst")
position = Vector2(0, -11.5385)
texture = ExtResource("15_bnq6x")

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="area_entered" from="HitBox" to="State Machine/Attack" method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="State Machine/Move" method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="State Machine/Attack" method="_on_hit_box_area_exited"]
[connection signal="animation_finished" from="AnimationTree" to="State Machine/Damaged" method="handle_transition"]
[connection signal="animation_finished" from="AnimationTree" to="State Machine/Attack" method="_on_attack_finished"]
[connection signal="transition" from="State Machine/Damaged" to="State Machine" method="on_state_transition"]
[connection signal="transition" from="State Machine/Death" to="State Machine" method="on_state_transition"]
[connection signal="transition" from="State Machine/Attack" to="State Machine" method="on_state_transition"]
[connection signal="transition" from="State Machine/Move" to="State Machine" method="on_state_transition"]
